LRU-Cache for course versions
1. Special folder for course versions' zip files
2. Clear and delete unzipped files from courses zips
3. Don't load course twice on version publishing
4. 'Back' button on diagnostics page
5. Bugfix: show first not last exception while loading courses

--- a/src/uLearn.Web/Views/Admin/Diagnostics.cshtml
+++ b/src/uLearn.Web/Views/Admin/Diagnostics.cshtml
@@ -12,7 +12,7 @@
 <div class="container">
 	@if (Model.IsVersionPublished)
 	{
-		<h2>Курс обновлён, @Html.RouteLink("перейти к курсу →", "Course", new { courseId = Model.CourseId, action = "SLide" }, new {})</h2>
+		<h2>Курс обновлён, @Html.RouteLink("перейти к курсу →", "Course", new { courseId = Model.CourseId, action = "Slide" }, new {})</h2>
 
 		<div>
 			@Html.ActionLink("← Назад", "Packages", new { courseId = Model.CourseId }, new { @class = "btn btn-primary" })
@@ -59,6 +59,7 @@
 				using (Html.BeginForm("PublishVersion", "Admin", new { Model.CourseId, Model.VersionId }, FormMethod.Post))
 				{
 					@Html.AntiForgeryToken()
+					@Html.ActionLink("← Назад", "Packages", new { courseId = Model.CourseId }, new { @class = "btn btn-xs btn-default" })
 					<button class="btn btn-xs btn-success">Опубликовать эту версию →</button>
 				}
 			}
