--- a/src/uLearn.Web/Views/Admin/List.cshtml
+++ b/src/uLearn.Web/Views/Admin/List.cshtml
@@ -1,13 +1,13 @@
 ﻿@model uLearn.Web.Controllers.UnitsListViewModel
 
 @{
-	ViewBag.Title = "List of Units";
+	ViewBag.Title = "Юниты";
 }
 
 @Html.Action("ManageMenu")
 
-<div class="container">
-	<h2>Управление юнитами</h2>
+<div class="slide-container">
+	<h2>Юниты</h2>
 
 	<table class="table table-autowidth">
 		<tr>
