--- a/src/uLearn.Web/Views/Admin/Packages.cshtml
+++ b/src/uLearn.Web/Views/Admin/Packages.cshtml
@@ -6,7 +6,7 @@
 
 @Html.Action("ManageMenu")
 
-<div class="container">
+<div class="slide-container">
 	<h2>Управление пакетами</h2>
 
 	@if (Model.HasPackage)
