--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -90,12 +90,14 @@
 @helper Block(YoutubeBlock block, BlockRenderContext context)
 {
 	<div class="video-container">
-		<iframe class="embedded-video" width="864" height="480" src="https://www.youtube.com/embed/@block.VideoId" allowfullscreen></iframe>
+		<iframe class="embedded-video" width="864" height="480" src="https://www.youtube.com/embed/@block.VideoId" frameborder="0" allowfullscreen></iframe>
 	</div>
 	<div>
-		<a href="javascript://" class="popover-trigger"
+		<a href="javascript://" class="popover-trigger pull-right"
 		   title="Как ускорить видео?"
-		   data-content="Если по иконке с шестеренкой нет возможности ускорить видео, то вам нужно &lt;a target='blank' href='http://youtube.com/html5'>вручную включить&lt;/a> использование HTML5-плеера.">
+		   data-content="Если по иконке с шестеренкой нет возможности ускорить видео, то вам нужно &lt;a target='blank' href='http://youtube.com/html5'>вручную включить&lt;/a> использование HTML5-плеера."
+		   data-placement="left">
+			<span class="glyphicon glyphicon-question-sign"></span>
 			Как ускорить видео?
 		</a>
 	</div>
@@ -134,7 +136,7 @@
 	var classString = context.IsGuest ? "code-guest" : "code-exercise";
 	<textarea id="secretCodeExercise" class="hide">@block.ExerciseInitialCode.EnsureEnoughLines(4)</textarea>
 	<textarea class="code @classString" data-lang="@block.LangId">@(data.LatestAcceptedSolution ?? block.ExerciseInitialCode.EnsureEnoughLines(4))</textarea>
-	<script>
+	<script type="text/javascript">
 		function cleanUserCode() {
 			var $secretCodeExercise = $('#secretCodeExercise');
 			$('.code-exercise')[0].codeMirrorEditor.setValue($secretCodeExercise.text());
