Manual checked slides
1. Instructors may view slides "as user" for checking them
2. Bugfix for OrderingBlock correctness defining
3. Max sores for slide questions

--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -19,12 +19,13 @@
 				@if (Model.Slide is QuizSlide)
 				{
 					@Html.Action("Quiz", "Quiz", new
-					{
-						slide = (QuizSlide)Model.Slide,
-						courseId = Model.CourseId,
-						userId = Model.UserId,
-						isGuest = Model.IsGuest
-					})
+					   {
+						   slide = (QuizSlide)Model.Slide,
+						   courseId = Model.CourseId,
+						   userId = Model.UserId,
+						   isGuest = Model.IsGuest,
+						   CheckingUserId = Model.BlockRenderContext.CheckingUserId
+					   })
 				}
 				else
 				{
