--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -24,7 +24,7 @@
 						   courseId = Model.CourseId,
 						   userId = Model.UserId,
 						   isGuest = Model.IsGuest,
-						   CheckingUserId = Model.BlockRenderContext.CheckingUserId
+						   manualQuizCheckQueueItem = Model.BlockRenderContext.ManualQuizCheckQueueItem
 					   })
 				}
 				else
