--- a/src/uLearn.Web/Views/Admin/ManageMenu.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManageMenu.cshtml
@@ -8,7 +8,7 @@
 		<li class="units-list-item full-width">@Html.ActionLink("Управление пакетами", "Packages", new { Model.CourseId }, new { @class = "units-list-item-text" })</li>
 		<li class="units-list-item full-width">@Html.ActionLink("Диагностики", "Diagnostics", new { Model.CourseId }, new { @class = "units-list-item-text" })</li>
 		<li class="units-list-item full-width">@Html.ActionLink("Юниты", "List", new { Model.CourseId }, new { @class = "units-list-item-text" })</li>
-		<li class="units-list-item full-width">@Html.ActionLink("Проверка", "ManualChecks", new { Model.CourseId }, new { @class = "units-list-item-text" })</li>
+		<li class="units-list-item full-width">@Html.ActionLink("Проверка", "ManualQuizChecksQueue", new { Model.CourseId }, new { @class = "units-list-item-text" })</li>
 		<li class="units-list-item full-width">@Html.ActionLink("Курс", "Slide", "Course", new { Model.CourseId }, new { @class = "units-list-item-text" })</li>
 	</ul>
 </div>
