--- a/src/uLearn.Web/Views/Quiz/Quiz.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Quiz.cshtml
@@ -13,7 +13,10 @@
 	}
 	else if (Model.ManualQuizCheckQueueItem != null)
 	{
-		status = string.Format("{0}, попытка {0} из {1}", Model.ManualQuizCheckQueueItem.User.VisibleName, Model.TryNumber, Model.MaxDropCount + 1);
+		status = string.Format("{0}, попытка {1} из {2}",
+			Model.ManualQuizCheckQueueItem.User.VisibleName,
+			Model.TryNumber,
+			Model.MaxDropCount + 1);
 	}
 	else if (Model.QuizState == QuizState.WaitForCheck)
 	{
