Multiline FillIn blocks
Support for fillin blocks without regexps and sample

--- a/src/uLearn.Web/Content/Site.css
+++ b/src/uLearn.Web/Content/Site.css
@@ -16,6 +16,10 @@ textarea {
     max-width: 280px;
 }
 
+textarea.form-control {
+	max-width: none;
+}
+
 /* styles for validation helpers */
 .field-validation-error {
     color: #b94a48;
