Allow to refill user quiz if it has not been checked already
1. Show waiting for check quizzes as blue in analytics
2. If quiz cannot be changed, show it's fields as readonly

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -342,6 +342,10 @@
 .rightQuizAnswer {
 	background-color: lightgreen !important;
 }
+
+.manualQuizAnswer {
+	background-color: lightblue !important;
+}
 /* ReSharper restore Html.CssClassElementsNotFound */
 
 .video-container {
