Just another small fixed
1. Fixed Next parameter for autorization
2. Enlarge fillIn input block
3. default-include-file → default-include-code-file

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -992,6 +992,10 @@ li.li-success {
 	padding-left: 23px;
 }
 
+.quiz.quiz-block-input .form-control {
+	max-width: none;
+}
+
 /* Quiz Analytics */
 .analytics__quiz-version__info {
 	margin-top: 15px;	
