--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -290,7 +290,14 @@
 			}
 			else
 			{
-				<input autocomplete="off" class="form-control @quizRes" value="@value" id='@(block.Id + "quizBlock")' maxlength="@QuizController.MAX_FILLINBLOCK_SIZE" @GetGuestDisable(context.IsGuest) @readonlyAttr/>
+				<input
+					autocomplete="off"
+					class="form-control @quizRes"
+					value="@value" id='@(block.Id + "quizBlock")'
+					maxlength="@QuizController.MAX_FILLINBLOCK_SIZE"
+					size="68"
+					@GetGuestDisable(context.IsGuest)
+					@readonlyAttr/>
 			}
 		</label>
 	</div>
